Modify JavaDOC and add comments to tui package's class